{
  "about": "关于",
  "aboutApp": "关于应用",
  "accept": "接受",
  "acceptFriendRequest": "通过朋友验证",
  "account": "账号",
  "accountSecurity": "账号安全",
  "addFriend": "添加朋友",
  "addPhoneContact": "添加手机联系人",
  "addTag": "添加标签",
  "addToContacts": "添加到通讯录",
  "addToDenylist": "加入黑名单",
...
  "blocked": "已拉黑",
  "botQianFan": "千帆机器人",
  "businessCard": "名片",
  "busyTryAgainLater": "对方正忙，请稍后重试",
  "buttonAccomplish": "完成",
  "buttonAdd": "添加",
  "buttonBack": "返回",
  "buttonBind": "buttonBind",
  "buttonCancel": "取消",
  "buttonChangePassword": "buttonChangePassword",
  "buttonClose": "关闭",
  "buttonConfirm": "确认",
  "buttonContinue": "继续",
  "buttonCopy": "复制",
  "buttonDelete": "删除",
  "buttonDeleteAccount": "buttonDeleteAccount",
  "buttonInviteCode": "邀请码",
  "buttonLogin": "buttonLogin",
  "buttonLogout": "注销",
  "buttonNextStep": "buttonNextStep",
  "buttonOk": "确定",
  "buttonRegister": "buttonRegister",
  "buttonResetPassword": "buttonResetPassword",
  "buttonRetry": "重试",
  "buttonSave": "保存",
  "buttonSelectFromAlbum": "从相册选择",
  "buttonSend": "发送",
  "buttonSetEmpty": "置空",
  "buttonSubmit": "提交",
  "buttonTakingPictures": "拍照",
  "cache": "缓存",
  "cacheTips": "缓存是使用APP过程中产生的临时数据，清理缓存不会影响你的正常使用。",
  "callDuration": "通话时长",
...
  "disable": "禁用",
  "displayProfile": "显示你的资料",
  "downloaded": "已下载",
  "earlier": "更早",
  "edit": "编辑",
  "editTag": "编辑标签",
  "email": "邮箱",
  "enGb": "英国英语",
  "enUs": "美国英语",
  "frFr": "法语（法国）",
  "deDd": "德语（德国）",
  "jaJp": "日语（日本）",
  "koKr": "韩语（韩国）",
...
  "loadError": "加载失败，请重试",
  "loadMore": "加载更多",
  "loading": "加载中",
  "location": "位置",
  "locationMessage": "位置消息",
  "logOut": "退出登录",
  "login": "登录",
  "loginDeviceManagement": "登录设备管理",
  "loginDeviceManagementTips": "你的帐号在以下设备中登录过，你可以删除设备，删除后在该设备登录时需进行安全验证。",
  "loginEmail": "登录邮箱",
  "logoutAccount": "注销账号",
  "logoutNotice": "《注销须知》",
  "loudspeaker": "扩音器",
...
  "p2pCallScreenLogic": "p2pCallScreenLogic",
  "p2pCallScreenView": "p2pCallScreenView",
  "packageSize": "包大小",
  "paramAlreadyExist": "%s已存在",
  "paramFormatError": "%s格式有误",
  "paramLogin": "%s登录",
  "password": "密码",
  "pauseDownloading": "暂停下载",
  "peerHasHungUp": "对方已挂断",
  "peerNoResponse": "对方无应答...",
  "peopleInfoMoreLogic": "peopleInfoMoreLogic",
  "peopleInfoSameGroupView": "peopleInfoSameGroupView",
  "peopleNearby": "附近的人",
...
