...
            ],
          ),
          SizedBox(
            height: 60,
          ),
          RoundedInputField(
            hintText: '账号/邮箱/手机号',
            icon: Icons.person,
            onChanged: controller.onUsernameChanged,
          ),
          RoundedPasswordField(
            onChanged: controller.onPasswordChanged,
          ),
...
