...
  "cancelLogoutBody": "This account is in the revocation period of the cancellation. If you log in successfully, it will be considered as terminating the logout process. If you wish to continue with the cancellation, please do not log in to IMBoy within 15 days after submitting the cancellation application.",
  "buttonSave": "Save",
  "buttonCancel": "Cancel",
  "buttonAccomplish": "Accomplish",
  "buttonTakingPictures": "Take Photo",
  "buttonSelectFromAlbum": "Select from Album",
  "buttonSend": "Send",
  "login": "Log in",
  "signup": "Sign up",
  "buttonLogout": "Log out",
  "buttonSetEmpty": "Set Empty",
  "buttonConfirm": "Confirm",
  "buttonAdd": "Add",
  "buttonDelete": "Delete",
  "buttonClose": "Close",
  "resendCode": "Resend Verification Code",
  "buttonInviteCode": "Invitation Code",
  "forgotPassword": "Forgot Password?",
  "recoverPassword": "Recover Password",
  "buttonBack": "Back",
  "buttonCopy": "Copy",
  "buttonSubmit": "Submit",
  "signInWith": "Sign in with %s",
  "termOfServices": "Terms of Service",
  "selectedItems": "%s selected items",
  "titleMine": "Mine",
...
